0.0918 2020-10-07
  - SPVM::Util->rand is renamed to crand because perl rand is different from C rand.
0.0917 2020-10-06
  - fix bug that when a module contains multi packages, Perl Package is not created for after seconds packages
0.0916 2020-10-05
  - SPVM::Util->rand function don't need argument
  - add SPVM::Util->srand static method
  - remove SPVM::Util->random static method
  - add SPVM::Util->RAND_MAX static method
0.0915 2020-10-05
  - add precompile package descriptor
0.0914 2020-09-26
  - Class method is renamed to Static method. This is only SPVM document changing.
  - Matrix modules is removed from SPVM core, and moved to SPVM::AI::Util of CPAN module.
  - Big array test become private tests because not understandable memory error occured in some environment.
0.0913 2020-09-23
  - add SPVM::Matrix::Util
  - SPVM::Matrix::Float methods is moved to SPVM::Matrix::Util
  - SPVM::Matrix::Double methods is moved to SPVM::Matrix::Util
0.0912 2020-09-14
  - rename SPVM::Complex_2d x to re
  - rename SPVM::Complex_2d y to im
  - rename SPVM::Complex_2f x to re
  - rename SPVM::Complex_2f y to im
  - rename SPVM::Matrix::Double col to columns_length
  - rename SPVM::Matrix::Double row to rows_length
  - rename SPVM::Matrix::Float col to columns_length
  - rename SPVM::Matrix::Float row to rows_length
  
0.0911 2020-09-04
  - add complex functions to SPVM::Math
  
    native sub cacos : SPVM::Complex_2d ($z : SPVM::Complex_2d);
    native sub cacosf : SPVM::Complex_2f ($z : SPVM::Complex_2f);

    native sub casin : SPVM::Complex_2d ($z : SPVM::Complex_2d);
    native sub casinf : SPVM::Complex_2f ($z : SPVM::Complex_2f);

    native sub catan : SPVM::Complex_2d ($z : SPVM::Complex_2d);
    native sub catanf : SPVM::Complex_2f ($z : SPVM::Complex_2f);

    native sub ccos : SPVM::Complex_2d ($z : SPVM::Complex_2d);
    native sub ccosf : SPVM::Complex_2f ($z : SPVM::Complex_2f);

    native sub csin : SPVM::Complex_2d ($z : SPVM::Complex_2d);